--- a/app/src/main/res/values/ids.xml
+++ b/app/src/main/res/values/ids.xml
@@ -20,4 +20,5 @@
     <item name="topbar_right_more" type="id"/>
     <item name="topbar_right_save" type="id"/>
     <item name="topbar_right_edit" type="id"/>
+    <item name="topbar_right_comment" type="id"/>
 </resources>
