--- a/app/src/main/res/layout/activity_forum_list_item.xml
+++ b/app/src/main/res/layout/activity_forum_list_item.xml
@@ -7,60 +7,58 @@
 
     <TextView
         android:id="@+id/item_title"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/text_margin"
-        android:textAppearance="?attr/textAppearanceListItem"
+        android:textAppearance="@style/QDTextAppearanceListItem"
         android:text="item_title"
-        android:textSize="22sp"
-        android:textStyle="bold"
         android:maxEms="8"
         android:singleLine="true"
         android:ellipsize="marquee"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintRight_toLeftOf="@id/item_user_name"/>
 
     <TextView
         android:id="@+id/item_user_name"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:gravity="right"
         android:layout_margin="@dimen/text_margin"
-        android:textAppearance="?attr/textAppearanceListItem"
+        android:textAppearance="@style/QDTextAppearanceListItem"
+        android:textColor="@color/qmui_config_color_gray_2"
         android:text="item_user_name"
-        android:textSize="16sp"
-        android:textStyle="bold"
         android:maxEms="8"
         android:singleLine="true"
         android:ellipsize="marquee"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintRight_toRightOf="parent"/>
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintLeft_toRightOf="@id/item_title"/>
 
     <TextView
         android:id="@+id/item_description"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/text_margin"
-        android:textAppearance="?attr/textAppearanceListItem"
+        android:textAppearance="@style/QDTextAppearanceListItem"
         android:text="item_description"
-        android:textSize="20sp"
-        android:textStyle="bold"
         android:singleLine="true"
         android:scrollHorizontally="false"
         android:ellipsize="end"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/item_title" />
+        app:layout_constraintTop_toBottomOf="@id/item_title"
+        app:layout_constraintRight_toRightOf="parent"/>
 
     <TextView
         android:id="@+id/item_time"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:gravity="right"
         android:layout_margin="@dimen/text_margin"
-        android:textAppearance="?attr/textAppearanceListItem"
+        android:textAppearance="@style/QDTextAppearanceListItemSmall"
         android:text="item_time"
-        android:textSize="16sp"
-        android:textStyle="bold"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/item_description" />
-
+        app:layout_constraintTop_toBottomOf="@id/item_description"
+        app:layout_constraintLeft_toLeftOf="parent"/>
 
 </android.support.constraint.ConstraintLayout>
