--- a/app/src/main/res/layout/activity_forum_topic.xml
+++ b/app/src/main/res/layout/activity_forum_topic.xml
@@ -1,15 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v4.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<com.qmuiteam.qmui.widget.QMUIWindowInsetLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:id="@+id/activity_forum_topic_swipe_refresh_layout"
     tools:context=".ui.activity.ForumTopicActivity">
 
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:layout_marginTop="?attr/qmui_topbar_height"
+        android:fitsSystemWindows="true">
 
         <android.support.constraint.ConstraintLayout
             android:layout_width="match_parent"
@@ -21,57 +22,56 @@
 
             <TextView
                 android:id="@+id/topic_title"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_margin="@dimen/text_margin"
-                android:textAppearance="?attr/textAppearanceListItem"
+                android:textAppearance="@style/QDTextAppearanceListItem"
                 android:text="topic_title"
-                android:textSize="22sp"
-                android:textStyle="bold"
                 android:maxEms="8"
                 android:singleLine="true"
                 android:ellipsize="marquee"
                 app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintRight_toLeftOf="@id/topic_user_name"/>
 
             <TextView
                 android:id="@+id/topic_user_name"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:gravity="right"
                 android:layout_margin="@dimen/text_margin"
-                android:textAppearance="?attr/textAppearanceListItem"
+                android:textAppearance="@style/QDTextAppearanceListItem"
+                android:textColor="@color/qmui_config_color_gray_2"
                 android:text="topic_user_name"
-                android:textSize="16sp"
-                android:textStyle="bold"
                 android:maxEms="8"
                 android:singleLine="true"
                 android:ellipsize="marquee"
                 app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintRight_toRightOf="parent"/>
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintLeft_toRightOf="@id/topic_title"/>
 
             <TextView
                 android:id="@+id/topic_description"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_margin="@dimen/text_margin"
-                android:textAppearance="?attr/textAppearanceListItem"
+                android:textAppearance="@style/QDTextAppearanceListItem"
                 android:text="topic_description"
-                android:textSize="20sp"
-                android:textStyle="bold"
                 android:singleLine="false"
                 android:scrollHorizontally="false"
                 app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/topic_title" />
 
             <TextView
                 android:id="@+id/topic_time"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:gravity="right"
                 android:layout_margin="@dimen/text_margin"
-                android:textAppearance="?attr/textAppearanceListItem"
+                android:textAppearance="@style/QDTextAppearanceListItemSmall"
                 android:text="topic_time"
-                android:textSize="16sp"
-                android:textStyle="bold"
+                app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/topic_description" />
 
@@ -86,14 +86,30 @@
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintLeft_toLeftOf="parent"/>
 
+            <TextView
+                android:id="@+id/tip"
+                style="@style/QDCommonDescription"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:layout_margin="@dimen/text_margin"
+                android:text="该帖子暂无回复"
+                android:visibility="gone"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/comment_line1"
+                app:layout_constraintBottom_toBottomOf="parent"/>
+
         </android.support.constraint.ConstraintLayout>
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/activity_forum_topic_list"
             android:name="com.corkili.learningclient.ui.fragment.TeacherCourseFragment"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             app:layoutManager="android.support.v7.widget.LinearLayoutManager"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toBottomOf="@id/topic_content_layout"
             tools:context=".ui.activity.CourseCommentActivity"
             tools:listitem="@layout/activity_forum_topic_list_item" />
@@ -106,9 +122,16 @@
             app:layout_constraintRight_toRightOf="parent"
             android:layout_margin="16dp"
             app:pressedTranslationZ="12dp"
-            app:srcCompat="@drawable/ic_add_white" />
+            app:srcCompat="@drawable/ic_add_white"
+            app:backgroundTint="@color/app_color_blue_2"
+            app:rippleColor="@color/app_color_blue_2_pressed"/>
 
     </android.support.constraint.ConstraintLayout>
 
+    <com.qmuiteam.qmui.widget.QMUITopBarLayout
+        android:id="@+id/topbar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:fitsSystemWindows="true"/>
 
-</android.support.v4.widget.SwipeRefreshLayout>
+</com.qmuiteam.qmui.widget.QMUIWindowInsetLayout>
