--- a/app/src/main/res/layout/comment_reply_list_item.xml
+++ b/app/src/main/res/layout/comment_reply_list_item.xml
@@ -7,58 +7,55 @@
 
     <TextView
         android:id="@+id/reply_index"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/text_margin"
-        android:textAppearance="?attr/textAppearanceListItem"
+        android:textAppearance="@style/QDTextAppearanceListItem"
+        android:textColor="@color/qmui_config_color_gray_1"
         android:text="reply_index"
-        android:textSize="16sp"
-        android:textStyle="bold"
         android:maxEms="8"
         android:singleLine="true"
         android:ellipsize="marquee"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"/>
 
     <TextView
         android:id="@+id/reply_user_name"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/text_margin"
-        android:textAppearance="?attr/textAppearanceListItem"
+        android:textAppearance="@style/QDTextAppearanceListItem"
+        android:textColor="@color/qmui_config_color_gray_2"
         android:text="reply_user_name"
-        android:textSize="20sp"
-        android:textStyle="bold"
         android:maxEms="8"
         android:singleLine="true"
         android:ellipsize="marquee"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintLeft_toRightOf="@id/reply_index"/>
+        app:layout_constraintLeft_toRightOf="@id/reply_index"
+        app:layout_constraintRight_toRightOf="parent"/>
 
     <TextView
         android:id="@+id/reply_content"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/text_margin"
-        android:textAppearance="?attr/textAppearanceListItem"
+        android:textAppearance="@style/QDTextAppearanceListItem"
         android:text="reply_content"
-        android:textSize="20sp"
-        android:textStyle="bold"
-        android:singleLine="true"
+        android:singleLine="false"
         android:scrollHorizontally="false"
-        android:ellipsize="end"
         app:layout_constraintLeft_toRightOf="@id/reply_index"
-        app:layout_constraintTop_toBottomOf="@id/reply_index" />
+        app:layout_constraintTop_toBottomOf="@id/reply_user_name"
+        app:layout_constraintRight_toRightOf="parent"/>
 
     <TextView
         android:id="@+id/reply_time"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:gravity="right"
         android:layout_margin="@dimen/text_margin"
-        android:textAppearance="?attr/textAppearanceListItem"
+        android:textAppearance="@style/QDTextAppearanceListItemSmall"
         android:text="reply_time"
-        android:textSize="16sp"
-        android:textStyle="bold"
+        app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@id/reply_content" />
 
