#6 学生端-课程详情界面

--- a/app/src/main/res/values/ids.xml
+++ b/app/src/main/res/values/ids.xml
@@ -21,4 +21,5 @@
     <item name="topbar_right_save" type="id"/>
     <item name="topbar_right_edit" type="id"/>
     <item name="topbar_right_comment" type="id"/>
+    <item name="topbar_right_subscribe" type="id" />
 </resources>
