--- a/app/src/main/res/layout/fragment_student_course.xml
+++ b/app/src/main/res/layout/fragment_student_course.xml
@@ -5,6 +5,15 @@
     android:layout_height="match_parent"
     android:layout_width="match_parent">
 
+    <TextView
+        android:id="@+id/tip"
+        style="@style/QDCommonDescription"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:layout_margin="@dimen/text_margin"
+        android:text="没有课程信息哦~" />
+
     <com.qmuiteam.qmui.widget.pullRefreshLayout.QMUIPullRefreshLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
