#6 作业列表界面

--- a/app/src/main/res/values/ids.xml
+++ b/app/src/main/res/values/ids.xml
@@ -22,4 +22,5 @@
     <item name="topbar_right_edit" type="id"/>
     <item name="topbar_right_comment" type="id"/>
     <item name="topbar_right_subscribe" type="id" />
+    <item name="topbar_right_add" type="id" />
 </resources>
