#6 作业编辑界面

--- a/app/src/main/res/values/ids.xml
+++ b/app/src/main/res/values/ids.xml
@@ -23,4 +23,5 @@
     <item name="topbar_right_comment" type="id"/>
     <item name="topbar_right_subscribe" type="id" />
     <item name="topbar_right_add" type="id" />
+    <item name="topbar_right_delete" type="id" />
 </resources>
