--- a/app/src/main/res/layout/activity_question_check_answer.xml
+++ b/app/src/main/res/layout/activity_question_check_answer.xml
@@ -9,10 +9,8 @@
         android:id="@+id/filling_index"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:textAppearance="?attr/textAppearanceListItem"
+        android:textAppearance="@style/QDTextAppearanceListItem"
         android:text="index"
-        android:textSize="20sp"
-        android:textStyle="bold"
         android:singleLine="false"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent"
